[package]
name = "ix-match"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
version = "0.2.4"
edition = "2021"
repository = "https://github.com/HakaiInstitute/ix-match"
description = "A tool for matching and moving IIQ files so they can be easily imported into IX Capture."
license = "MIT"
readme = "README.md"

[dependencies]
polars = { version = "0.42.0", features = ["lazy", "asof_join", "is_in", "semi_anti_join", "dynamic_group_by", "abs"] }
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
glob = "0.3.1"
anyhow = "1.0.86"

[dev-dependencies]
tempfile = "3.12.0"
