[package]
name = "ix-match"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/HakaiInstitute/ix-match"
description = "A tool for matching and moving IIQ files so they can be easily imported into IX Capture."
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"], optional = true }
anyhow = "1.0.89"
globwalker = "0.9.0"

[dev-dependencies]
tempfile = "3.12.0"

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "ix-match"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "ix_match"
path = "src/lib.rs"
